--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Trabalho"
         tools:targetApi="31">
         <activity
+            android:name=".itemProduct"
+            android:exported="false" />
+        <activity
+            android:name=".AddProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".ItemProduto"
             android:exported="false" />
         <activity
